--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,22 +1,21 @@
 <ul class="top-bar">
-    <li style="float:left">
-        <div class="hamburger-menu">
-            <input id="menu__toggle" type="checkbox" />
-            <label class="menu__btn" for="menu__toggle">
-            <span></span>
-            </label>
 
-            <ul class="menu__box">
-                <li><a class="menu__item" href="#">Home</a></li>
-                <li><a class="menu__item" href="#">About</a></li>
-                <li><a class="menu__item" href="#">Team</a></li>
-                <li><a class="menu__item" href="#">Contact</a></li>
-                <li><a class="menu__item" href="#">Twitter</a></li>
-            </ul>
-        </div>
+    <!-- Hamburger menu -->
+    <li style="float:left">
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+        <span></span>
+        </label>
+
+        <ul class="menu__box">
+            <li><a class="menu__item" href="/stories">Public Stories</a></li>
+            <li><a class="menu__item" href="#">About</a></li>
+            <li><a class="menu__item" href="#">Team</a></li>
+            <li><a class="menu__item" href="#">Contact</a></li>
+            <li><a class="menu__item" href="#">Twitter</a></li>
+        </ul>
     </li>
 
-    <li style="float:left"><a href="/thoughts"><i class="bi bi-list"></i></a></li>
     <li><a href="/dashboard">Dashboard</a></li>
     <li style="float:right"><a href="/auth/logout">Logout</a></li>
 </ul> 
