--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,5 @@
 <div class="dash-content">
-    <h6 class="dash-content">Dashboard</h6>
-    <h3>Welcome {{name}}</h3>
-    <p>Here are your stories</p>
-
-    {{#if stories}}
+    {{#if thoughts}}
         <table class="striped">
             <thead>
                 <tr>
@@ -15,7 +11,7 @@
             </thead>
             
             <tbody>
-                {{#each stories}}
+                {{#each thoughts}}
                 <tr>
                     <td><a href="/stories/{{_id}}">{{title}}</a></td>
                     <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
@@ -37,6 +33,6 @@
             </tbody>
         </table>
     {{else}}
-        <p>You have no stories</p>
+        <p>You have no thoughts</p>
     {{/if}}
 </div>
