worked on switching to thoughts

--- a/views/partials/_add_btn.hbs
+++ b/views/partials/_add_btn.hbs
@@ -1,4 +1,4 @@
 <div class="add-btn">
-    <a href="/stories/add" class="btn-floating btn-large waves-effect waves-lightred">
+    <a href="/thoughts/add" class="btn-floating btn-large waves-effect waves-lightred">
     <i class="fas fa-plus"></i></a>
 </div>
