--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -8,7 +8,7 @@
         </label>
 
         <ul class="menu__box">
-            <li><a href="/stories">Public Stories</a></li>
+            <li><a href="/thoughts">Public Thoughts</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
     </li>
