--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,15 +13,15 @@
             <tbody>
                 {{#each thoughts}}
                 <tr>
-                    <td><a href="/stories/{{_id}}">{{title}}</a></td>
+                    <td><a href="/thoughts/{{_id}}">{{title}}</a></td>
                     <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
                     <td><span class="dash-status">{{status}}</span></td>
                     <td>
-                        <a href="/stories/edit/{{_id}}" class="btn btn-float">
+                        <a href="/thoughts/edit/{{_id}}" class="btn btn-float">
                             <i class="fas fa-edit"></i>
                         </a>
 
-                        <form action="/stories/{{_id}}" method="POST" id="delete-form">
+                        <form action="/thoughts/{{_id}}" method="POST" id="delete-form">
                             <input type="hidden" name="_method" value="DELETE">
                             <button type="submit" class="btn red">
                                 <i class="fas fa-trash"></i>
