--- a/views/thoughts/edit.hbs
+++ b/views/thoughts/edit.hbs
@@ -1,10 +1,10 @@
-<h3>Edit Story</h3>
+<h3>Edit Thought</h3>
 <div class="row">
-    <form action="/stories/{{story._id}}" method="POST" class="col s12">
+    <form action="/thoughts/{{thought._id}}" method="POST" class="col s12">
         <input type="hidden" name="_method" value="PUT">
         <div class="row">
             <div class="input-field">
-                <input type="text" id="title" name="title" value="{{story.title}}">
+                <input type="text" id="title" name="title" value="{{thought.title}}">
                 <label for="title">Title</label>
             </div>
         </div>
@@ -21,8 +21,8 @@
 
         <div class="row">
             <div class="input-field">
-                <h5>Tell Us Your Story:</h5>
-                <textarea id="body" name="body">{{story.body}}</textarea>
+                <h5>Share your thoughts:</h5>
+                <textarea id="body" name="body">{{thought.body}}</textarea>
             </div>
         </div>
 
