--- a/views/thoughts/index.hbs
+++ b/views/thoughts/index.hbs
@@ -1,6 +1,6 @@
-<h1>Stories</h1>
+<h1>Thoughts</h1>
 <div class="row">
-    {{#each stories}}
+    {{#each thoughts}}
         <div class="col s12 m4">
             <div class="card">
                 <div class="card-image">
@@ -9,20 +9,20 @@
                 </div>
                 <div class="card-content center-align">
                     <h5>{{title}}</h5>
-                    <p>{{stripTags (truncate body 150)}}</p>
+                    <p>{{text}}</p>
                     <br>
                     <div class="chip">
                         <img src="{{user.image}}" alt="User image">
-                        <a href="/stories/user/{{user._id}}">{{user.displayName}}</a>
+                        <a href="/thoughts/user/{{user._id}}">{{user.displayName}}</a>
                     </div>
                 </div>
 
                 <div class="card-action center-align">
-                    <a href="/stories/{{_id}}" class="btn grey">Read more</a>
+                    <a href="/thoughts/{{_id}}" class="btn grey">Read more</a>
                 </div>
             </div>
         </div>
     {{else}}
-        <p>No public stories to display</p>
+        <p>No public thoughts to display</p>
     {{/each}}
 </div>
