--- a/views/thoughts/index.hbs
+++ b/views/thoughts/index.hbs
@@ -5,10 +5,9 @@
             <div class="card">
                 <div class="card-image">
                     <!-- to parse html with handlebars use triple braces -->
-                    {{{editIcon user ../user _id}}}
+                    {{{user ../user _id}}}
                 </div>
                 <div class="card-content center-align">
-                    <h5>{{title}}</h5>
                     <p>{{text}}</p>
                     <br>
                     <div class="chip">
