--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,9 @@
 :root {
-  color: #FFFFFF;
+  color: #818181;
 }
 
 body {
   background-color: #000000;
-}
-
-p{
-  margin: 10px 0px !important;
-  color: #818181;
 }
 
 .login-container {
@@ -17,12 +12,6 @@ p{
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-}
-
-.card {
-	background-color: #161618;
-	color: #ffffff;
-  width: 300px;
 }
 
 .btn {
@@ -117,6 +106,43 @@ hr {
   max-height: 2rem;
   margin: auto 0px;
 }
+
+
+
+/* Home page thought containers */
+
+.feed-container {
+
+}
+
+.thought {
+
+}
+
+.user-pic {
+
+}
+
+.thought-info-bar {
+
+}
+
+.thought-content {
+
+}
+
+.thought-impressions {
+
+}
+
+/* Home page thought containers */
+
+
+
+
+
+
+
 
 
 #menu__toggle {
