--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,30 +1,44 @@
 <div class="dash-content">
     {{#if thoughts}}
-        <table>
-            <tbody>
-                {{#each thoughts}}
-                <tr>
-                    <td><a href="/thoughts/{{_id}}">{{title}}</a></td>
-                    <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
-                    <td><span class="dash-status">{{status}}</span></td>
-                    <td>
-                        <form action="/thoughts/{{_id}}" method="POST" id="delete-form">
-                            <input type="hidden" name="_method" value="DELETE">
-                            <button type="submit" class="btn red">
-                                <i class="fas fa-trash"></i>
-                            </button>
-                        </form>
-                    </td>
-                </tr>
+        <div class="feed-container">
+            {{#each thoughts}}
+            <div class="thought">
+                <div class="user-pic">
 
-                <!-- Formatting each thought on the home page -->
-                <tr>
+                </div>
+                
+                <div class="thought-info-bar">
 
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
+                </div>
+
+                <div class="thought-content">
+
+                </div>
+
+                <div class="thought-impressions">
+
+                </div>
+            </div>
+        </div>
+
+        {{/each}}
     {{else}}
         <p>You have no thoughts</p>
     {{/if}}
 </div>
+
+
+
+<tr>
+    <td><a href="/thoughts/{{_id}}">{{title}}</a></td>
+    <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
+    <td><span class="dash-status">{{status}}</span></td>
+    <td>
+        <form action="/thoughts/{{_id}}" method="POST" id="delete-form">
+            <input type="hidden" name="_method" value="DELETE">
+            <button type="submit" class="btn red">
+                <i class="fas fa-trash"></i>
+            </button>
+        </form>
+    </td>
+</tr>
