--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,20 +121,34 @@ hr {
   display: flex;
   width: 100%;
   height: auto;
+  min-height: 50px;
+
+  border-style: solid;
+  border-width: 1px;
 }
 
-.user-pic {
+.profile-pic-container {
+  display: flex;
   width: 20%;
   height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-pic {
+  border-radius: 50%; 
+  margin: 10px 0px;
+  height: 50px;
+  width: 50px;
 }
 
 .thought-content {
-
+  width: 80%;
 }
 
 .thought-info-bar {
   width: 80%;
-  height: 10%;
+  height: 30%;
 }
 
 .thought-text {
