Thoughts displaying properly and switched to Bootstrap

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,8 @@
                     </div>
 
                     <div class="thought-impressions">
-
+                        <i class="bi bi-heart"></i>
+                        <!-- <i class="bi bi-heart-fill"></i> -->
                     </div>
                 </div>
 
