--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,11 @@ body {
   background-color: #000000;
 }
 
+p {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .login-container {
 	width: 30%;
 	margin-top: 5%;
@@ -41,7 +46,6 @@ hr {
   display: flex;
   flex-direction: column;
 	background-color: #000000 !important;
-	color: #FFFFFF !important;
   width: 100%;
   height: 100%;
 }
@@ -129,42 +133,50 @@ hr {
 
 .profile-pic-container {
   display: flex;
-  width: 20%;
-  height: 100%;
+  width: 10%;
+  height: auto;
   align-items: center;
   justify-content: center;
 
-  border: 2px solid #4E9F3D;
+  /* border: 2px solid #4E9F3D; */
 }
 
 .profile-pic {
   border-radius: 50%; 
-  margin: 10px 0px;
+  margin: 5px 0px;
   height: 50px;
   width: 50px;
 }
 
 .thought-content {
-  width: 80%;
+  width: 90%;
 
-  border: 2px solid #FF0000;
+  /* border: 2px solid #FF0000; */
 }
 
 .thought-info-bar {
-  width: 80%;
-  height: 30%;
+  width: auto;
+  height: 25px;
+
+  /* border: 2px solid #4E9F3D; */
 }
 
 .thought-text {
+  color: #FFFFFF;
+  width: auto;
+  height: auto;
 
+  margin: 5px 0px;
 
-  border: 2px solid #00FFFF;
+  /* border: 2px solid #00FFFF; */
 }
 
 .thought-impressions {
+  width: auto;
+  height: auto;
+  margin: 10px 0px;
 
-
-  border: 2px solid #FF00FF;
+  /* border: 2px solid #FF00FF; */
 }
 
 /* Home page thought containers */
