--- a/views/partials/_add_btn.hbs
+++ b/views/partials/_add_btn.hbs
@@ -1,4 +1,4 @@
 <div class="add-btn">
     <a href="/thoughts/add" class="btn-floating btn-large waves-effect waves-lightred">
-    <i class="fas fa-plus"></i></a>
+    <i class="bi bi-plus-circle"></i></a>
 </div>
