--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 :root {
   color: #818181;
+  font-size: 16px !important;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
 p {
   margin-top: auto;
   margin-bottom: auto;
+  display: inline-block;
 }
 
 .login-container {
@@ -156,7 +158,7 @@ hr {
 
 .thought-info-bar {
   width: auto;
-  height: 25px;
+  height: 2rem;
 
   /* border: 2px solid #4E9F3D; */
 }
@@ -173,7 +175,7 @@ hr {
 
 .thought-impressions {
   width: auto;
-  height: auto;
+  height: 2rem;
   margin: 10px 0px;
 
   /* border: 2px solid #FF00FF; */
@@ -184,7 +186,134 @@ hr {
 
 
 
+/* 3 dot menu for thought deleting */
 
+.kebab {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0 16px;
+}
+
+.kebab figure {
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: #FFFFFF;
+  margin: 3px 0;
+}
+
+.cross {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -1px;
+  color: white;
+  user-select: none;
+}
+
+h1, a, li {
+  font-family: Roboto, sans-serif;
+}
+
+h1 {
+  font-size: 26px;
+  background: #00bcd4;
+  color: white;
+  padding: 40px 0 40px 20%;
+  margin-bottom: 50px;
+}
+
+a, li {
+  color: #6b6b6b;
+  text-decoration: none;
+}
+
+.nav {
+  margin-left: 20%;
+}
+
+.nav > li {
+  display: inline-block;
+  padding: 1em 18px;
+  cursor: pointer;
+}
+
+.nav > li:hover {
+  background: #ebebeb;
+}
+
+.dropdown {
+  position: absolute;
+  right: 0;
+  top: 3em;
+  transition: all 0.25s ease-out;
+  transform: scale(0);
+  transform-origin: 100% 0;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 8px 0 rgba(0, 0, 0, 0.12);
+}
+
+.dropdown li {
+  display: block;
+  width: 100%;
+}
+
+.dropdown li a {
+  width: 100%;
+  padding: 1em 18px;
+  display: inline-block;
+  white-space: pre;
+  box-sizing: border-box;
+}
+
+.dropdown li a:hover {
+  background: #ebebeb;
+}
+
+.dropdown:hover ul {
+  transform: scale(1);
+}
+
+.dropdown.active {
+  transform: scale(1);
+  transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+}
+
+.follow {
+  overflow: hidden;
+  width: 42px;
+  height: 42px;
+  border-radius: 50px;
+  background: #03a9f4;
+  display: block;
+  margin: 300px auto 0;
+  white-space: nowrap;
+  padding: 13px;
+  box-sizing: border-box;
+  color: white;
+  transition: all 0.2s ease;
+  font-family: Roboto, sans-serif;
+  text-decoration: none;
+  box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.2);
+}
+.follow i {
+  margin-right: 20px;
+  transition: margin-right 0.2s ease;
+}
+.follow:hover {
+  width: 134px;
+}
+.follow:hover i {
+  margin-right: 10px;
+}
+@media screen and (max-width: 800px) {
+  .follow {
+    margin: 400px auto 0;
+ }
+}
+
+/* 3 dot menu for thought deleting */
 
 
 
