added standard js to dev dependencies and dev script and cleaned up all files

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,7 +4,7 @@
             {{#each thoughts}}
             <div class="thought">
                 <div class="profile-pic-container">
-                    <img src="{{user.image}}" alt="User image" class="profile-pic">
+                    <img src="{{user.image}}" referrerpolicy="no-referrer" alt="User image" class="profile-pic">
                 </div>
                 
                 <div class="thought-content">
