--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,9 @@
 
     <!-- <script src="https://kit.fontawesome.com/ae6d6b95a9.js" crossorigin="anonymous"></script> -->
 
+    <!-- Favicon ico placeholder -->
+    <link rel="shortcut icon" href="../../favicon.ico" />
+    
     <title>Thoughtly</title>
 </head>
 <body>
