Work on admin dash and file restructure

--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -6,6 +6,7 @@
                 
                 <p>{{displayName}}</p>
 
+                <a href="/admin/edit/{{_id}}" class="btn"> <i class=""></i> </a>  
             </div>
             {{/each}}
         </div>
