--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,7 @@
                 <hr>
 
                 <div class="section">
-                    <a href="/auth/google" class="btn darken-1">
+                    <a href="/auth/google" class="btn btn-green darken-1">
                     <i class="fab fa-google left"></i> Log In With Google
                     </a>
                 </div>
