--- a/views/admin/editUser.hbs
+++ b/views/admin/editUser.hbs
@@ -2,13 +2,27 @@
     <input type="hidden" name="_method" value="PUT">
     <div class="row">
         <div class="input-field">
-            <input type="text" id="title" name="title" value="{{user.title}}">
-            <label for="title">Title</label>
+            <input type="text" id="handle" name="handle" value="{{user.handle}}">
+            <label for="handle">Handle</label>
         </div>
     </div>
 
     <div class="row">
-        <input type="submit" value="Save" class="btn">
-        <a href="/dashboard" class="btn orange">Cancel</a>
+        <div class="input-field">
+            <input type="text" id="displayName" name="displayName" value="{{user.displayName}}">
+            <label for="displayName">Display Name</label>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="input-field">
+            <input type="text" id="userType" name="userType" value="{{user.userType}}">
+            <label for="userType">User Type</label>
+        </div>
+    </div>
+
+    <div class="row">
+        <input type="submit" value="Save" class="btn btn-outline-success">
+        <a href="/home" class="btn btn-outline-danger">Cancel</a>
     </div>
 </form>
