Added ability to view any user's profile

--- a/views/user/home.hbs
+++ b/views/user/home.hbs
@@ -9,7 +9,7 @@
                 
                 <div class="thought-content">
                     <div class="thought-info-bar">
-                        <p>{{user.displayName}}@{{user.handle}}</p>
+                        <a href="/user/{{user.handle}}"><p>{{user.displayName}}@{{user.handle}}</p></a>
 
                         <!-- Three dot menu for deleting thoughts -->
                         <div class="kebab">
