changed to / instead of /home

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -8,12 +8,14 @@
         </label>
 
         <ul class="menu__box">
-            <li><a href="/thoughts">Public Thoughts</a></li>
+            <li><a href="/search">Search</a></li>
+            <li><a href="/thoughts">Public Thoughts (trending)</a></li>
+            <li><a href="/profile">Profile</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
     </li>
 
-    <li><a href="/home">Home</a></li>
+    <li><a href="/">Home</a></li>
 
     <li style="float:right">
         <div class="search-bar">
