--- a/views/admin/editUser.hbs
+++ b/views/admin/editUser.hbs
@@ -23,6 +23,6 @@
 
     <div class="row">
         <input type="submit" value="Save" class="btn btn-outline-success">
-        <a href="/home" class="btn btn-outline-danger">Cancel</a>
+        <a href="/" class="btn btn-outline-danger">Cancel</a>
     </div>
 </form>
