--- a/views/error/500.hbs
+++ b/views/error/500.hbs
@@ -1,3 +1,3 @@
 <h1>Internal server error</h1>
 <p>Something went wrong</p>
-<a href="/home" class="btn">Go home</a>
+<a href="/" class="btn">Go home</a>
