--- a/views/thoughts/add.hbs
+++ b/views/thoughts/add.hbs
@@ -3,14 +3,20 @@
     <form action="/thoughts" method="POST" class="col s12">
         <div class="row">
             <div class="input-field">
-                <h5>Tell Us Your Story:</h5>
+                <h5>Share a thought:</h5>
                 <textarea id="text" name="text"></textarea>
             </div>
         </div>
 
         <div class="row">
             <input type="submit" value="Save" class="btn">
-            <a href="/home" class="btn orange">Cancel</a>
+            <a href="/" class="btn orange">Cancel</a>
         </div>
     </form>
 </div>
+
+<script>
+    var input = document.getElementById('text');
+    input.focus();
+    input.select();
+</script>
