Started on search and discovery

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -10,6 +10,7 @@
         <ul class="menu__box">
             <li><a href="/search">Search</a></li>
             <li><a href="/thoughts">Public Thoughts (trending)</a></li>
+            <li><a href="/discover">Discover (Accounts to follow)</a></li>
             <li><a href="/profile">Profile</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
