--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,6 +15,7 @@
     <title>Thoughtly</title>
 </head>
 <body>
+    <script>0</script>
     <div class="center-content">
         {{> _header}}
         {{> _add_btn}}
