--- a/views/userProfile.hbs
+++ b/views/userProfile.hbs
@@ -9,53 +9,28 @@
 
 <hr>
 
-<!-- __________________________________________________________ -->
-<!-- User is from home, should be replaced with profile I think -->
-<!-- __________________________________________________________ -->
 <div class="dash-content">
     {{#if thoughts}}
         <div class="feed-container" id="feed">
             {{#each thoughts}}
             <div class="thought">
                 <div class="profile-pic-container">
-                    <img src="{{user.image}}" referrerpolicy="no-referrer" alt="User image" class="profile-pic">
+                    <img src="{{this.user.image}}" referrerpolicy="no-referrer" alt="User image" class="profile-pic">
                 </div>
                 
                 <div class="thought-content">
                     <div class="thought-info-bar">
-                        <a href="/user/{{user.handle}}"><p>{{user.displayName}}@{{user.handle}}</p></a>
-
-                        <!-- Three dot menu for deleting thoughts -->
-                        <div class="kebab">
-                            <span class="bi bi-three-dots">
-
-                                <ul class="dropdown">
-                                    <li>         
-                                        <form action="/thoughts/{{_id}}" method="POST" id="delete-form">
-                                        <input type="hidden" name="_method" value="DELETE">
-                                        <button type="submit" class="btn red">
-                                            <p>Delete Thought</p>
-                                        </button>
-                                        </form> 
-                                    </li>
-
-                                    <li> <a href="#">Edit Thought</a> </li>
-                                </ul>
-                                
-                            </span>
-
-                        </div>
-
+                        <p>{{this.user.displayName}}@{{this.user.handle}}</p>
                     </div>
 
                     <div class="thought-text">
-                        <p>{{text}}</p>
+                        <p>{{this.text}}</p>
                     </div>
 
                     <div class="thought-impressions">
                         <span class="bi bi-heart"></span>
                         <!-- <span class="bi bi-heart-fill"></span> -->
-   
+
                     </div>
                 </div>
 
@@ -64,6 +39,6 @@
         </div>
 
     {{else}}
-        <p>You have no thoughts</p>
+        <p>No thoughts yet</p>
     {{/if}}
 </div>
