--- a/client/src/components/Thought/thought.css
+++ b/client/src/components/Thought/thought.css
@@ -1,3 +1,58 @@
-.thought {
-  color: white;
+img {
+  max-width: 100%;
+}
+
+.profile-image {
+  border-radius: 100px;
+  width: 48px;
+  margin-right: 15px;
+}
+
+.post-container {
+  max-width: 490px;
+  background: #303030;
+  margin: 0 auto;
+  margin-top: 5px;
+  border-radius: 3px;
+  padding: 25px;
+}
+
+.post-header {
+  display: flex;
+  align-items: flex-start;
+  font-size: 14px;
+}
+
+.post-header-info {
+  font-weight: bold;
+}
+
+.post-header-info span {
+  color: #657786;
+  font-weight: normal;
+  margin-left: 5px;
+}
+
+.post-header-info p {
+  font-weight: normal;
+  margin-top: 5px;
+}
+
+.post-img-wrap {
+  padding-left: 60px;
+}
+
+.post-info-counts {
+  display: flex;
+  margin-left: 60px;
+  margin-top: 10px;
+}
+.post-info-counts div {
+  display: flex;
+  margin-right: 20px;
+}
+
+.post-info-counts div svg {
+  color: #657786;
+  margin-right: 10px;
 }
