--- a/client/src/components/PostModal/postmodal.css
+++ b/client/src/components/PostModal/postmodal.css
@@ -1,6 +1,11 @@
-.close-modal-btn {
-  background-color: rgb(37, 37, 37);
-  border-color: rgb(36, 36, 36);
+.modal-container {
+  margin:auto;
+  transform: translate(0, 42rem);
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.9);
+  height: 15rem;
+  width: 30rem;
 }
 
 .overlay {
@@ -12,28 +17,31 @@
   z-index: 1;
 }
 
-.modal-container {
-  margin:auto;
-  transform: translate(0, 42rem);
-  
-  
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(0, 0, 0, 0.8);
-  height: 15rem;
-  width: 30rem;
-}
-
 .modal-header {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
-.modal-content {
+.close-modal-btn {
+  background-color: rgb(37, 37, 37);
+  border-color: rgb(36, 36, 36);
+  align-self: right;
+  margin: 4px 4px 4px 0px;
 }
 
-.create-thought-text {
+.add-post-text {
+  color: black;
+  resize: none;
+  white-space: pre-wrap;
+  margin-left: 1rem;
+  margin-right: auto;
 }
 
-.modal-footer {
+.modal-submit-btn {
+  color: black;
+  width: 2.5rem;
+  height: 1.5rem;
+  margin-top: 0.25rem;
+  margin-left: 0.25rem;
 }
