--- a/client/src/components/Thought/thought.css
+++ b/client/src/components/Thought/thought.css
@@ -1,5 +1,6 @@
 img {
   max-width: 100%;
+  max-height: 100%;
 }
 
 .profile-image {
@@ -9,12 +10,13 @@ img {
 }
 
 .post-container {
-  max-width: 490px;
+  max-width: 35rem;
   background: #303030;
   margin: 0 auto;
   margin-top: 5px;
   border-radius: 3px;
   padding: 25px;
+  height: auto;
 }
 
 .post-header {
@@ -45,8 +47,8 @@ img {
 
 .post-info-counts {
   display: flex;
-  margin-left: 60px;
   margin-top: 10px;
+  height: 1rem;
 }
 .post-info-counts div {
   display: flex;
