fixed login/logout cookie logic, updated home styling

--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,20 +1,32 @@
 .home {
-    width: 100%;
+  width: 100%;
 }
 
 .add-modal {
-    background-color: rgba(163, 92, 10, 0.603);
-    border-radius: 3rem;
-    border-color: rgba(0, 0, 0, 0);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    z-index: 5;
-    float: right;
-    position: fixed;
-    bottom:7%;
-    right: 5%;
-    width: 5rem;
-    height: 5rem;
-    font-size: 60px;
-    font-weight: 100;
+  background-color: rgba(163, 92, 10, 0.603);
+  border-radius: 3rem;
+  border-color: rgba(0, 0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  z-index: 5;
+  float: right;
+  position: fixed;
+  bottom: 7%;
+  right: 5%;
+  width: 5rem;
+  height: 5rem;
+  font-size: 60px;
+  font-weight: 100;
+}
 
+.home-cont-wrap {
+  display: flex;
+  flex-direction: row;
+}
+
+.holder-left {
+  height: 100%;
+}
+
+.holder-right {
+  height: 100%;
 }
