--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -18,6 +18,7 @@ section {
   padding: 40px;
   border-radius: 4px;
   box-shadow: 0 15px 35px rgba(0, 0, 0, 9);
+  max-height: 25rem;
 }
 
 section .signin .content {
@@ -34,6 +35,7 @@ section .signin .content h2 {
   font-size: 2em;
   color: rgb(72, 132, 63);
   text-transform: uppercase;
+  text-align: center;
 }
 
 section .signin .content .form {
@@ -97,4 +99,14 @@ section .signin .content .form .inputBox i {
   font-size: 1.35em;
   letter-spacing: 0.05em;
   cursor: pointer;
+}
+
+.forgot-link {
+  text-align: left;
+  padding-left: 0.5rem;
+}
+
+.signup-link {
+  text-align: right;
+  padding-right: 0.5rem;
 }
