added links to footer

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,7 +1,16 @@
 .footer {
-  height: 5rem;
-  width: 100%;
-  text-align: center;
+  margin: 1.5rem 0rem 2rem 0rem;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  margin-top: 2rem;
+  column-gap: 2rem;
+  height: 4rem;
+}
+
+.github-link {
+  width: 4rem;
+}
+
+.linkedin-link {
+  width: 4rem;
 }
